[gd_scene load_steps=2 format=2]

[ext_resource path="res://Entry_Editor/List_Entry.gd" type="Script" id=1]

[node name="List_Entry" type="HBoxContainer"]
offset_right = 1024.0
offset_bottom = 20.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
offset_top = 3.0
offset_right = 960.0
offset_bottom = 17.0
size_flags_horizontal = 3
text = "List_Entry_Label"

[node name="Edit_Button" type="Button" parent="."]
offset_left = 964.0
offset_right = 1000.0
offset_bottom = 20.0
text = "Edit"

[node name="Delete_Button" type="Button" parent="."]
offset_left = 1004.0
offset_right = 1024.0
offset_bottom = 20.0
text = "X"

[connection signal="pressed" from="Edit_Button" to="." method="_on_Edit_Button_pressed"]
[connection signal="pressed" from="Delete_Button" to="." method="_on_Button_pressed"]
